--- a/miniOdev/Views/Shared/_Layout.cshtml
+++ b/miniOdev/Views/Shared/_Layout.cshtml
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="~/miniOdev.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css"/>
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.3.2/css/buttons.dataTables.min.css"/>
+    <link rel="stylesheet" href="~/css/Loader.css" asp-append-version="true" />
+    @await RenderSectionAsync("Styles", required: false)
 </head>
 <body class="myBody">
     <header>
@@ -36,6 +38,24 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ListeyiGor">@_stringLocalizer["page.SeeList"]</a>
                         </li>
+                         @{
+                            if (!Context.User.Identity.IsAuthenticated)
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Giriş</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Kayıt Ol</a>
+                                </li>
+                            }
+                            else
+                            {
+                               
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Çıkış</a>
+                                </li>
+                            }
+                        }
                     </ul>
                 </div>
               <div class="js" style="margin-right:50px;">
@@ -338,7 +358,7 @@ Math.easeInOutQuad = function(t, b, c, d) {
 		button = button + '<span aria-hidden="true" class="language-picker__label language-picker__flag language-picker__flag--'+picker.select.value+'"><em>'+picker.selectedOption+'</em>';
 		button = button +picker.svgPath+'</span>';
 
-        console.log(picker)  //ilk seçili yer
+         //ilk seçili yer
 		return button+'</button>';
 	};
 
