basit bir middleware yazdım. bu sayede yeni kayıt açıldığında quartz zamanlayıcısı stop start oluyor ve anlık olarak yeni job kayıtlarını hafızasına alıyor.

--- a/miniOdev/Views/Home/VeriGirisi.cshtml
+++ b/miniOdev/Views/Home/VeriGirisi.cshtml
@@ -96,7 +96,7 @@
                     if (e.result == false) {
                         swal({
                             title: "Beklenmeyen bir hata oluştu!",
-                            icon: "danger",
+                            icon: "error",
                             button: "Geri",
                         });
                         return false;
