--- a/miniOdev/Views/Shared/_Layout.cshtml
+++ b/miniOdev/Views/Shared/_Layout.cshtml
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css"/>
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.3.2/css/buttons.dataTables.min.css"/>
     <link rel="stylesheet" href="~/css/Loader.css" asp-append-version="true" />
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
     @await RenderSectionAsync("Styles", required: false)
 </head>
 <body class="myBody">
@@ -50,7 +52,9 @@
                             }
                             else
                             {
-                               
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="JobPage">Zamanlayıcı</a>
+                                </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Çıkış</a>
                                 </li>
@@ -84,7 +88,9 @@
             <div>&copy; 2022 - miniOdev</div> <div><a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/logo.jpg" height="25" width="100%" alt="" /></a></div>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+ @*   <script src="~/lib/jquery/dist/jquery.min.js"></script>*@
+ <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
@@ -93,6 +99,7 @@
     <script src="https://cdn.datatables.net/buttons/2.3.2/js/buttons.html5.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 
     <script>
