--- a/miniOdev/Views/Account/Register.cshtml
+++ b/miniOdev/Views/Account/Register.cshtml
@@ -1,4 +1,12 @@
 ﻿@model RegisterModel
+@using miniOdev.Languages
+@using Microsoft.Extensions.Localization
+@inject IStringLocalizer<Lang> _stringLocalizer;
+
+@{
+    ViewData["Title"] = @_stringLocalizer["page.Register"];
+}
+
 
 <div class="row">
     <div class="col-md-3">
@@ -6,35 +14,34 @@
     <div class="col-md-6">
         <div class="card">
             <div class="card-header text-center">
-                Üyelik Kaydı
+                @_stringLocalizer["page.Register"]
             </div>
             <div class="card-body">
                 <form asp-action="Register" asp-controller="Account" method="post">
                     <div class="text-danger" asp-validation-summary="All"> </div>
                     <div class="form-floating mb-3">
                         <input asp-for="UserName" value="@Model.UserName" type="text" class="form-control" id="UserName" placeholder=".">
-                        <label asp-for="UserName" value="@Model.Email">KullanıcıAdi</label>
+                        <label asp-for="UserName" value="@Model.Email">@_stringLocalizer["page.Username"]</label>
                     </div>
                     <div class="form-floating mb-3">
                         <input asp-for="Tckimlik" value="@Model.Tckimlik" type="text" class="form-control" id="Tckimlik" placeholder=".">
-                        <label asp-for="Tckimlik" value="@Model.Tckimlik">Tckimlik</label>
+                        <label asp-for="Tckimlik" value="@Model.Tckimlik">@_stringLocalizer["page.TRID"]</label>
                     </div>
                     <div class="form-floating mb-3">
                         <input asp-for="Email" value="@Model.Email" type="email" class="form-control" id="Email" placeholder=".">
-                        <label asp-for="Email" value="@Model.Email">E-mail</label>
+                        <label asp-for="Email" value="@Model.Email">@_stringLocalizer["page.EmailAddress"]</label>
                     </div>
                     <div class="form-floating mb-3">
                         <input asp-for="Password" value="@Model.Password" type="password" class="form-control" id="Password" placeholder=".">
-                        <label asp-for="Password" value="@Model.Password">Parola</label>
+                        <label asp-for="Password" value="@Model.Password">@_stringLocalizer["page.Password"]</label>
                     </div>
                     <div class="form-floating mb-3">
                         <input asp-for="RePassword" value="@Model.RePassword" type="password" class="form-control" id="RePassword" placeholder=".">
-                        <label asp-for="RePassword" value="@Model.RePassword">Tekrar-Parola</label>
+                        <label asp-for="RePassword" value="@Model.RePassword">@_stringLocalizer["page.ConfirmPassword"]</label>
                     </div>
                     <div class="col-md-12">
-                        <button type="submit" value="Save" class="btn btn-outline-success w-100"> Kaydet</button>
+                        <button type="submit" value="Save" class="btn btn-outline-success w-100">@_stringLocalizer["page.Save"]</button>
                     </div>
-
                 </form>
             </div>
         </div>
