--- a/miniOdev/Views/Home/VeriGirisi.cshtml
+++ b/miniOdev/Views/Home/VeriGirisi.cshtml
@@ -36,7 +36,7 @@
                         <input asp-for="KanGrubu" value="@Model.KanGrubu" type="text" class="form-control" id="bloodGroup" required>
                     </div>
                     <div class="mb-3">
-                        <button type="submit" class="btn btn-primary w-100">@_stringLocalizer["page.Save"]</button>
+                        <button type="submit" class="btn btn-outline-primary w-100">@_stringLocalizer["page.Save"]</button>
                     </div>                
                 </form>
             </div>
